<resources>
    <string name="app_name">手机卫士</string>

    <string name="hint_input_password">请输入密码</string>
    <string name="hint_confirm_password">请再次输入密码</string>

    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>

    <string name="tv_please_set_password">请设置密码</string>
    <string name="tv_please_input_password">请输入密码</string>


    <string name="tv_main_ui">欢迎来到手机卫士</string>
    <string name="tv_setting_center">设置中心</string>

    <string name="tv_sate_num">安全手机号码:</string>
    <string name="tv_query_phone_num">手机号码归属地查询</string>
    <string name="tv_change_location">更改归属地显示位置</string>
    <string name="tv_backup_sms">短信备份</string>
    <string name="tv_restore_sms">短信还原</string>
    <string name="tv_app_lock">程序锁</string>
    <string name="tv_common_num">常用电话号码</string>
    <string name="tv_change_style">更改归属地显示风格</string>
    <string name="tv_service_state">归属地服务已关闭</string>
    <string name="tv_unknown_num">未知号码</string>

    <string name="tv_auto_update_setting">自动更新设置</string>
    <string name="tv_auto_update_open">自动更新已开启</string>
    <string name="tv_auto_update_closed">自动更新已关闭</string>
    <string name="tv_blacklist_setting">黑名单拦截设置</string>
    <string name="tv_blacklist_intercept_open">黑名单拦截已开启</string>
    <string name="tv_blacklist_intercept_closed">黑名单拦截已关闭</string>
    <string name="tv_address_show_setting">归属地显示设置</string>
    <string name="tv_address_open">归属地显示已开启</string>
    <string name="tv_address_closed">归属地显示已关闭</string>
    <string name="tv_app_lock_setting">程序锁设置</string>
    <string name="tv_applock_open">程序锁已开启</string>
    <string name="tv_applock_closed">程序锁已关闭</string>
    <string name="tv_app_manager">软件管理</string>
    <string name="tv_progress_manager">进程管理</string>

</resources>
