<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tool"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.my.mobilesafe.activity.tool.ToolActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_query_phone_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/tv_query_phone_num"
        android:textSize="24sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_backup_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/tv_backup_sms"
        android:textSize="24sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_restore_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/tv_restore_sms"
        android:textSize="24sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_app_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/tv_app_lock"
        android:textSize="24sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_common_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/tv_common_num"
        android:textSize="24sp" />
</LinearLayout>
